added admin layout and created image polymorphic

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,11 @@
 /node_modules
 /yarn-error.log
 
+/config/database.yml
+/config/secrets.yml
+/config/application.yml
+
+/public/uploads/
+/public/images/
+
 .byebug_history
