--- a/yamls/system.yml
+++ b/yamls/system.yml
@@ -1,10 +1,10 @@
 ---
 zh_tw:
-  site_name: '1'
+  site_name: AMF Creative 繁中
 zh_cn:
-  site_name: '2'
+  site_name: AMF Creative 簡中
 en:
-  site_name: '3'
+  site_name: AMF Creative EN
 others:
   email: dachang.dev@gmail.com
   ga_id: '111'
